REGRESSION (r270458): Canvas painting is broken when enabling GPU process for DOM https://bugs.webkit.org/show_bug.cgi?id=219760

Reviewed by Tim Horton.

Use `ImageBuffer::logicalSize` instead of `ImageBuffer::backendSize` when overriding the CanvasBase's size, upon
changing image buffers. When enabling GPU process for DOM, `ImageBufferShareableIOSurfaceBackend::backendSize`
is empty because the actual IOSurface backend exists in the GPU process; using the backendSize instead of the
logical size here would otherwise cause us to always set CanvasBase's size to `(0, 0)`.

* html/CanvasBase.cpp:
(WebCore::CanvasBase::setImageBuffer const):

Canonical link: https://commits.webkit.org/232339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270676 268f45cc-cd09-0410-ab3c-d52691b4dbfc